# TCPServerCLI

./: CMakeLists.txt  README.md
include/: ClientResponse.h  ServerQueries.h  clientManager.h  tcpNetworkManager.h
src/: ClientResponse.cpp  ServerQueries.cpp  clientManager.cpp  main.cpp  tcpNetworkManager.cpp
